# triage

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/agents/: mast-classifier-reviewer.md  runbook-parseability-reviewer.md  security-reviewer.md
.claude/hooks/: secrets-scan.sh  terraform-apply-gate.sh  terraform-fmt.sh
.claude/skills/add-mcp-tool/: SKILL.md
.claude/skills/add-outage-scenario/: SKILL.md
.claude/skills/add-runbook/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
agent/: AGENT.md
cedar-policies/: README.md  _emergency-shutdown.cedar.disabled  agent-tools.cedar  schema.cedarschema
docs/: 00-workflow-pattern.md  agent-md-changelog.md  day-31-reading.md  future-plans.md  iam-permissions-reference.md
docs/adr/: 0001-record-architecture-decisions.md  0002-build-on-agentcore-not-raw-api.md  0003-four-mcp-namespaces.md  0004-cedar-plus-slack-write-gating.md  0005-agentcore-evaluations-not-custom-harness.md  0006-mast-failure-mode-annotation.md  0007-designed-for-multi-agent-ships-single.md  README.md  template.md
docs/architecture-references/: 00-project-memory-index.md  agentcore-evaluations-2026-03.md  agentcore-primitives-runtime-gateway-identity-memory-2026.md  aws-devops-agent-architecture-molumuri-2026-03.md  aws-fis-fault-injection-reference-2026.md  aws-multi-agent-sre-architecture-2025.md  aws-samples-incident-response-pattern-2025.md  mast-failure-modes-ibm-berkeley-2026-02.md  mcp-protocol-and-auth-2026.md  triage-decision-doc-v2.md  triage-decision-doc-v3.md
docs/collaboration-decisions/: 001-agent-md-bloat-runbooks-restoration.md  002-multi-agent-line-held-scalability-scope-up.md  README.md
docs/eval-results/: README.md  dashboard.md  query.md  summary.md
docs/scenario-runs/: 01-target-group-port-mismatch.md  02-missing-env-var.md  03-az-slowdown.md
evals/: run_evals.py  summarize_runs.py
evals/judges/: __init__.py  asks_before_destructive_action.md  diagnosis_matches_ground_truth.md  mast_classification.md
evals/scenarios/: 01-target-group-port-mismatch.yaml  02-missing-env-var.yaml  03-az-slowdown.yaml  04-ecs-task-stop.yaml  05-subnet-blackhole.yaml  06-rds-reboot.yaml  07-iam-permission-gap.yaml  08-container-oom-kill.yaml  09-secret-value-corrupted.yaml
runbooks/: az-slowdown.md  ecs-task-stop.md  missing-env-var.md  rds-reboot.md  subnet-blackhole.md  target-group-port-mismatch.md
scripts/: provision_agentcore.py  provision_evaluators.py  smoke_agent.py
src/triage/agent/: Dockerfile  __init__.py  runtime.py
src/triage/mcp_server/: Dockerfile  __main__.py  auth.py  server.py
src/triage/shared/: audit.py  aws.py  cedar_sync.py  errors.py  evaluate_spans.py  otel.py  slack.py
terraform/overlays/az-slowdown/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/overlays/container-oom-kill/: README.md  main.tf  outputs.tf  variables.tf
terraform/overlays/ecs-task-stop/: README.md  main.tf  outputs.tf  variables.tf
terraform/overlays/iam-permission-gap/: README.md  main.tf  outputs.tf  variables.tf
terraform/overlays/missing-env-var/: README.md  main.tf  outputs.tf  variables.tf
terraform/overlays/rds-reboot/: README.md  main.tf  outputs.tf  variables.tf
terraform/overlays/secret-value-corrupted/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/overlays/subnet-blackhole/: README.md  main.tf  outputs.tf  variables.tf
terraform/overlays/target-group-port-mismatch/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/stack/: agent.tf  evals.tf  example.tfvars  main.tf  mcp_server.tf  outputs.tf  providers.tf  variables.tf  versions.tf
tests/: conftest.py  test_smoke.py
tests/integration/: test_mcp_server_smoke.py
tests/unit/evals/: test_run_evals_posthoc.py  test_synthetic_alarm.py
tests/unit/lambdas/: test_alarm_bridge.py
tests/unit/mcp_server/: test_auth.py
tests/unit/shared/: test_audit.py  test_cedar_sync.py  test_evaluate_spans.py  test_slack.py
(+49 files in other folders)
